@@ -1,3 +1,8 @@
+2006-12-27  Matthew Gregan  <kinetik@orcon.net.nz>
+
+	* netsync.cc (struct session): Fix a very minor warning: const
+	static vs static const.
+
 2006-12-26  Matthew Gregan  <kinetik@orcon.net.nz>
 
 	* Makefile.am (BOTAN_SOURCES): Remove entries for missing headers,
